# SellLocalMisc

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
DeleteUser/: delete_tenant.py
emails/: README.md  contacts.csv  send.py
emails/campaigns/expired-store/: fetch.py  template.html
emails/campaigns/free-tier-launch/: fetch.py  template.html
emails/campaigns/new-dashboard/: fetch.py  template.html
emails/campaigns/new-features/: contacts.csv
emails/campaigns/restaurant-outreach/: cities.txt  fetch.py  template.html
emails/templates/: new-docs.html
